--- a/templates/partials/summary/collapsible-summary.html
+++ b/templates/partials/summary/collapsible-summary.html
@@ -53,7 +53,7 @@
         "data-ga": "click",
         "data-ga-category": "Preview Survey",
         "data-ga-action": "Show all",
-        "data-ga-label": "Show all"
+        "data-ga-label": "Show all click"
       }
   },
   "itemsList": itemList
