--- a/templates/preview.html
+++ b/templates/preview.html
@@ -16,7 +16,8 @@
       "attributes": {
         "data-ga": 'click',
         "data-ga-category": 'Navigation',
-        "data-ga-action": 'Previous link click'
+        "data-ga-action": 'Previous',
+        "data-ga-label": "Previous link click"
       }
     }
   ]
@@ -97,7 +98,7 @@
               "data-ga": "click",
               "data-ga-category": "Preview Survey",
               "data-ga-action": "Show all",
-              "data-ga-label": "Show all"
+              "data-ga-label": "Show all click"
             }
           },
           "itemsList": itemList
