--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -16,7 +16,8 @@
         "attributes": {
           "data-ga": 'click',
           "data-ga-category": 'Navigation',
-          "data-ga-action": 'Back to surveys link click'
+          "data-ga-action": 'Back to surveys',
+          "data-ga-label": 'Back to surveys link click'
         }
       }
     ]
