--- a/templates/layouts/_base.html
+++ b/templates/layouts/_base.html
@@ -14,7 +14,8 @@
         "attributes": {
           "data-ga": 'click',
           "data-ga-category": 'Navigation',
-          "data-ga-action": 'Previous link click'
+          "data-ga-action": 'Previous',
+          "data-ga-label": "Previous link click"
         }
       }
     ]
