--- a/templates/partials/individual-response-guidance.html
+++ b/templates/partials/individual-response-guidance.html
@@ -6,7 +6,7 @@
   "headingAttributes": {
     "data-ga": "click",
     "data-ga-category": "definition",
-    "data-ga-action": "Open panel",
+    "data-ga-action": "Open panel click",
     "data-ga-label": title
   }
 }) %}
