--- a/templates/partials/introduction/preview.html
+++ b/templates/partials/introduction/preview.html
@@ -24,6 +24,7 @@
           "data-ga": "click",
           "data-ga-category": "Preview Survey",
           "data-ga-action": "Open panel",
+          "data-ga-label": "Open panel click",
       }
     } %}
 
@@ -40,7 +41,7 @@
               "data-ga": "click",
               "data-ga-category": "Preview Survey",
               "data-ga-action": "Show all",
-              "data-ga-label": "Show all"
+              "data-ga-label": "Show all click"
             }
           },
           "itemsList": accordionItems
