--- a/templates/view-submitted-response.html
+++ b/templates/view-submitted-response.html
@@ -17,7 +17,8 @@
       "attributes": {
         "data-ga": 'click',
         "data-ga-category": 'Navigation',
-        "data-ga-action": 'Previous link click'
+        "data-ga-action": 'Previous',
+        "data-ga-label": "Previous link click"
       }
     }
   ]
