Change open panel labels

--- a/templates/partials/individual-response-guidance.html
+++ b/templates/partials/individual-response-guidance.html
@@ -6,8 +6,8 @@
   "headingAttributes": {
     "data-ga": "click",
     "data-ga-category": "definition",
-    "data-ga-action": "Open panel click",
-    "data-ga-label": title
+    "data-ga-action": "Open panel",
+    "data-ga-label": "Open definition panel"
   }
 }) %}
   <div class="ons-u-mt-s">
