--- a/templates/partials/question.html
+++ b/templates/partials/question.html
@@ -28,7 +28,7 @@
       "data-ga": "click",
       "data-ga-category": "Question definition",
       "data-ga-action": "Open panel",
-      "data-ga-label": "Open panel click",
+      "data-ga-label": "Open question definition panel",
       "data-qa": definition_id ~ "-title"
     },
     "contentAttributes": {
