--- a/templates/partials/answer-guidance.html
+++ b/templates/partials/answer-guidance.html
@@ -8,7 +8,7 @@
     "data-ga": "click",
     "data-ga-category": "Answer guidance",
     "data-ga-action": "Open panel",
-    "data-ga-label": "Open panel click",
+    "data-ga-label": "Open answer guidance panel",
     "data-qa": "answer-guidance-" ~ answer.id ~ "-title"
   },
   "contentAttributes": {
