--- a/templates/partials/definition.html
+++ b/templates/partials/definition.html
@@ -8,7 +8,7 @@
     "data-ga": "click",
     "data-ga-category": category,
     "data-ga-action": "Open panel",
-    "data-ga-label": "Open panel click",
+    "data-ga-label": "Open definition panel",
     "data-qa": definition_id ~ "-title"
   },
   "contentAttributes": {
