--- a/templates/partials/introduction/preview.html
+++ b/templates/partials/introduction/preview.html
@@ -24,7 +24,7 @@
           "data-ga": "click",
           "data-ga-category": "Preview Survey",
           "data-ga-action": "Open panel",
-          "data-ga-label": "Open panel click",
+          "data-ga-label": "Open definition panel",
       }
     } %}
 
