Fix data-ga question-error

--- a/templates/partials/question.html
+++ b/templates/partials/question.html
@@ -132,7 +132,7 @@
       "text": question_error,
       "id": question.id ~ '-error',
       "attributes": {
-        "data-ga": "question-error",
+        "data-ga": "error",
         "data-ga-category": "Question error",
         "data-ga-action": question.type,
         "data-ga-label": question.id
