Show all and confirmation email fixes

--- a/templates/partials/confirmation-email-form.html
+++ b/templates/partials/confirmation-email-form.html
@@ -10,8 +10,8 @@
     "attributes": {
       "data-ga": "error",
       "data-ga-category": "Error",
-      "data-ga-action": "Confirmation Email",
-      "data-ga-label": email_field.id
+      "data-ga-action": "Send confirmation",
+      "data-ga-label": "Confirmation email",
     }
   } %}
 {% endif %}
