--- a/templates/preview.html
+++ b/templates/preview.html
@@ -98,7 +98,7 @@
               "data-ga": "click",
               "data-ga-category": "Preview Survey",
               "data-ga-action": "Show all",
-              "data-ga-label": "Show all click"
+              "data-ga-label": "Show all button click"
             }
           },
           "itemsList": itemList
