--- a/templates/partials/confirmation-email-form.html
+++ b/templates/partials/confirmation-email-form.html
@@ -11,7 +11,7 @@
       "data-ga": "error",
       "data-ga-category": "Error",
       "data-ga-action": "Send confirmation",
-      "data-ga-label": "Confirmation email",
+      "data-ga-label": "Confirmation email error",
     }
   } %}
 {% endif %}
