Add config and formatted files

--- a/templates/calculatedsummary.html
+++ b/templates/calculatedsummary.html
@@ -1,5 +1,3 @@
 {% extends 'layouts/_calculatedsummary.html' %}
 
-{% block form_title %}
-  <h1 data-qa="calculated-summary-title">{{ content.summary.title }}</h1>
-{% endblock %}
+{% block form_title %}<h1 data-qa="calculated-summary-title">{{ content.summary.title }}</h1>{% endblock %}
