--- a/templates/confirm-email.html
+++ b/templates/confirm-email.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/_base.html' %}
+
 {% import 'macros/helpers.html' as helpers %}
+
 {% from "components/button/_macro.njk" import onsButton %}
 
 {% set hide_sign_out_button = content.hide_sign_out_button %}
@@ -7,33 +9,32 @@
 {% set sign_out_url = content.sign_out_url %}
 
 {% block main %}
-  {% set form = content.form %}
-  {% if form.mapped_errors %}
-    {% set error_title = _("There is a problem with your answer") %}
-    {% include 'partials/error-panel.html' %}
-  {% endif %}
-
-  <h1 class="question__title ons-u-fs-xxl" data-qa="confirm-email-title">{{ content.question.title }}</h1>
-  <div class="question__description"><p>{{ content.question.description}}</p></div>
-  {%- for answer in question.answers -%}
-    {% set question_title = answer.title %}
-    {% include 'partials/answer.html' %}
-  {%- endfor -%}
-
-  {{
-    onsButton({
-      "text": _("Continue"),
-      "variants": 'timer',
-      "classes": "ons-u-mt-xl",
-      "attributes": {
-        "data-qa": "btn-submit",
-        "data-ga-category": "Submit button",
-        "data-ga-action": "Continue",
-        "data-ga-label": "Continue button click",
-        "data-ga": "click"
-      }
+    {% set form = content.form %}
+    {% if form.mapped_errors %}
+        {% set error_title = _("There is a problem with your answer") %}
+        {% include 'partials/error-panel.html' %}
+    {% endif %}
+    <h1 class="question__title ons-u-fs-xxl" data-qa="confirm-email-title">{{ content.question.title }}</h1>
+    <div class="question__description">
+        <p>{{ content.question.description }}</p>
+    </div>
+    {%- for answer in question.answers -%}
+        {% set question_title = answer.title %}
+        {% include 'partials/answer.html' %}
+    {%- endfor -%}
+    {{ onsButton({
+        "text": _("Continue") ,
+    "variants": 'timer',
+    "classes": "ons-u-mt-xl",
+    "attributes": {
+    "data-qa": "btn-submit",
+    "data-ga-category": "Submit button",
+    "data-ga-action": "Continue",
+    "data-ga-label": "Continue button click",
+    "data-ga": "click"
+    }
     })
-  }}
-  <br><br>
-
+    }}
+    <br>
+    <br>
 {% endblock %}
