--- a/templates/feedback-sent.html
+++ b/templates/feedback-sent.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/_base.html' %}
+
 {% from 'components/panel/_macro.njk' import onsPanel %}
 {% from 'components/button/_macro.njk' import onsButton %}
 
@@ -13,24 +14,24 @@
         "classes": "ons-u-mb-s",
         "iconType": "check",
         "iconSize": "xl"
-    }) %}
+        }) %}
         <h1 data-qa="feedback-thank-you-text">{{ _("Thank you for your feedback") }}</h1>
-        <p>{{ _("Your comments will help us make improvements to our surveys. We are not able to reply to comments, but we appreciate your feedback") }}</p>
+        <p>
+            {{ _("Your comments will help us make improvements to our surveys. We are not able to reply to comments, but we appreciate your feedback") }}
+        </p>
     {% endcall %}
-
-    {{
-        onsButton({
-            "type": "button",
-            "text": _("Done"),
-            "classes": "ons-u-mb-m",
-            "url": url_for('post_submission.get_thank_you'),
-            "attributes": {
-                "data-qa": "btn-done",
-                "data-ga-category": "Submit button",
-                "data-ga-action": "Done",
-                "data-ga-label": "Done button click",
-                "data-ga": "click"
-            }
-        })
+    {{ onsButton({
+        "type": "button",
+        "text": _("Done") ,
+    "classes": "ons-u-mb-m",
+    "url": url_for('post_submission.get_thank_you'),
+    "attributes": {
+    "data-qa": "btn-done",
+    "data-ga-category": "Submit button",
+    "data-ga-action": "Done",
+    "data-ga-label": "Done button click",
+    "data-ga": "click"
+    }
+    })
     }}
 {% endblock %}
