--- a/templates/layouts/_questionnaire.html
+++ b/templates/layouts/_questionnaire.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/_base.html' %}
+
 {% from "components/button/_macro.njk" import onsButton %}
 
 {% set block = content.block %}
@@ -20,25 +21,26 @@
     {% endblock %}
 
     {% block submit_button %}
-        {{
-            onsButton({
+        {{ onsButton({
                 "variants": 'timer',
-                "text": continue_button_text | default(_("Save and continue")),
-                "attributes": {
-                    "data-qa": "btn-submit",
-                    "data-ga-category": "Submit button",
-                    "data-ga-action": "Save and continue",
-                    "data-ga-label": "Save and continue button click",
-                    "data-ga": "click"
-                }
-            })
+                "text": continue_button_text | default(_("Save and continue") ),
+        "attributes": {
+        "data-qa": "btn-submit",
+        "data-ga-category": "Submit button",
+        "data-ga-action": "Save and continue",
+        "data-ga-label": "Save and continue button click",
+        "data-ga": "click"
+        }
+        })
         }}
     {% endblock %}
 
     {% block after_submit_button_content %}
         {% if content.return_to_hub_url %}
-            <p class="ons-u-mt-xl"><a href="{{ content.return_to_hub_url }}" data-ga-action="Choose another section click">{{ _("Choose another section and return to this later") }}</a></p>
+            <p class="ons-u-mt-xl">
+                <a href="{{ content.return_to_hub_url }}"
+                   data-ga-action="Choose another section click">{{ _("Choose another section and return to this later") }}</a>
+            </p>
         {% endif %}
     {% endblock %}
-
 {% endblock %}
