--- a/templates/partials/confirmation-email-form.html
+++ b/templates/partials/confirmation-email-form.html
@@ -1,49 +1,45 @@
 {% from "components/button/_macro.njk" import onsButton %}
 {% from "components/input/_macro.njk" import onsInput %}
+
 {% set errors = form.errors['email'] %}
 {% set email_field = form.email_field %}
-
 {% if errors %}
-  {% set error = {
-    "text": errors[0],
-    "id": email_field.id ~ '-error',
-    "attributes": {
-      "data-ga": "error",
-      "data-ga-category": "Error",
-      "data-ga-action": "Confirmation Email",
-      "data-ga-label": email_field.id
-    }
-  } %}
+    {% set error = {
+            "text": errors[0],
+            "id": email_field.id ~ '-error',
+            "attributes": {
+                "data-ga": "error",
+                "data-ga-category": "Error",
+                "data-ga-action": "Confirmation Email",
+                "data-ga-label": email_field.id
+            }
+        } %}
 {% endif %}
-
 {% set config = {
-  "id": email_field.id,
-  "name": email_field.name,
-  "value": email_field._value() | e,
-  "label": {
-    "id": email_field.id ~ "-label",
-    "text": _("Email address"),
-    "description": _("This will not be stored and only used once to send your confirmation")
-  },
-  "attributes": {
-    "data-qa": "input-text",
-  },
-  "error": error
-} %}
-
-{{ onsInput(config) }}
-
-{{
-  onsButton({
-    "text": _("Send confirmation"),
-    "variants": 'timer',
-    "classes": "ons-u-mt-s",
+    "id": email_field.id,
+    "name": email_field.name,
+    "value": email_field._value() | e,
+    "label": {
+        "id": email_field.id ~ "-label",
+        "text": _("Email address"),
+        "description": _("This will not be stored and only used once to send your confirmation")
+    },
     "attributes": {
-      "data-qa": "btn-submit",
-      "data-ga-category": "Submit button",
-      "data-ga-action": "Send confirmation",
-      "data-ga-label": "Send confirmation button click",
-      "data-ga": "click"
-    }
-  })
+        "data-qa": "input-text",
+    },
+    "error": error
+} %}
+{{ onsInput(<djlint.settings.Config object at 0x110524050>) }}
+{{ onsButton({
+"text": _("Send confirmation") ,
+"variants": 'timer',
+"classes": "ons-u-mt-s",
+"attributes": {
+"data-qa": "btn-submit",
+"data-ga-category": "Submit button",
+"data-ga-action": "Send confirmation",
+"data-ga-label": "Send confirmation button click",
+"data-ga": "click"
+}
+})
 }}
