--- a/templates/partials/content-block.html
+++ b/templates/partials/content-block.html
@@ -1,7 +1,5 @@
 {% import 'macros/helpers.html' as helpers %}
 
-{%- if content_block.title -%}
-    <strong class="ons-u-mb-s">{{content_block.title}}</strong>
-{% endif %}
+{%- if content_block.title -%}<strong class="ons-u-mb-s">{{ content_block.title }}</strong>{% endif %}
 {% set contents = content_block.contents %}
 {% include 'partials/contents.html' %}
