--- a/templates/partials/error-panel.html
+++ b/templates/partials/error-panel.html
@@ -3,33 +3,31 @@
 
 {% set error_list = [] %}
 {% for error_id, error in form.mapped_errors %}
-  {{ error_list.append( {
-    "text": error,
-    "url": "#" + error_id,
-    "variants": "inPageLink",
-    "attributes": {
-      "data-qa": "error-link-" + loop.index|string
-    }
-  } ) or "" }}
+    {{ error_list.append({
+        "text": error,
+        "url": "#" + error_id,
+        "variants": "inPageLink",
+        "attributes": {
+        "data-qa": "error-link-" + loop.index|string
+        }
+        }) or "" }}
 {% endfor %}
-
 {% call
-  onsPanel({
+    onsPanel({
     "type": "error",
     "classes": "ons-u-mb-s",
     "title": error_title,
     "attributes": {
-      "data-qa": "error-body"
+    "data-qa": "error-body"
     }
-  })
-%}
-  {{
-    onsList({
-      "element": "ol",
-      "attributes": {
-        "data-qa": "error-list"
-      },
-      "itemsList": error_list
     })
-  }}
+    %}
+    {{ onsList({
+        "element": "ol",
+        "attributes": {
+        "data-qa": "error-list"
+        },
+        "itemsList": error_list
+        }) 
+    }}
 {% endcall %}
