--- a/templates/view-submitted-response.html
+++ b/templates/view-submitted-response.html
@@ -6,69 +6,63 @@
 
 {% set hide_sign_out_button = content.hide_sign_out_button %}
 {% set sign_out_url = content.sign_out_url %}
-
 {% set breadcrumbs = {
-  "ariaLabel": 'Back',
-  "itemsList": [
-    {
-      "url": url_for("post_submission.get_thank_you"),
-      "id": "top-previous",
-      "text": _("Back"),
-      "attributes": {
-        "data-ga": 'click',
-        "data-ga-category": 'Navigation',
-        "data-ga-action": 'Previous link click'
-      }
-    }
-  ]
+    "ariaLabel": 'Back',
+    "itemsList": [
+        {
+            "url": url_for("post_submission.get_thank_you"),
+            "id": "top-previous",
+            "text": _("Back"),
+            "attributes": {
+                "data-ga": 'click',
+                "data-ga-category": 'Navigation',
+                "data-ga-action": 'Previous link click'
+            }
+        }
+    ]
 } %}
 
 {% block main %}
-  <h1 class="ons-u-mt-m">
-    {{ content.submitted_text}}
-  </h1>
-  {{ onsDescriptionList(content.metadata)}}
-  {% if not content.view_submitted_response.expired %}
-    {{
-      onsButton({
-        "type": 'button',
-        "text": _('Print answers'),
+    <h1 class="ons-u-mt-m">{{ content.submitted_text }}</h1>
+    {{ onsDescriptionList(content.metadata) }}
+    {% if not content.view_submitted_response.expired %}
+        {{ onsButton({
+                "type": 'button',
+                "text": _('Print answers') ,
         "variants": ['small', 'secondary', 'print'],
         "attributes": {
-          "data-qa": "btn-print",
-          "data-ga-category": "Print button",
-          "data-ga-action": "Open print Dialogue",
-          "data-ga-label": "Print button click",
-          "data-ga": "click"
+        "data-qa": "btn-print",
+        "data-ga-category": "Print button",
+        "data-ga-action": "Open print Dialogue",
+        "data-ga-label": "Print button click",
+        "data-ga": "click"
         }
-      })
-    }}
-    {{
-      onsButton({
-        "text": _('Save answers as PDF'),
+        })
+        }}
+        {{ onsButton({
+                "text": _('Save answers as PDF') ,
         "variants": ['small', 'secondary', 'timer', 'download'],
         "url": content.pdf_url,
         "removeDownloadAttribute": true,
         "attributes": {
-          "data-qa": "btn-pdf",
-          "data-ga-category": "PDF button",
-          "data-ga-action": "Download PDF",
-          "data-ga-label": "PDF button click",
-          "data-ga": "click"
+        "data-qa": "btn-pdf",
+        "data-ga-category": "PDF button",
+        "data-ga-action": "Download PDF",
+        "data-ga-label": "PDF button click",
+        "data-ga": "click"
         }
-      })
-    }}
-    {% block summary %}
-      <div class="ons-u-mt-l ons-u-mb-l">
-        {% include 'partials/summary/summary.html' %}
-      </div>
-    {% endblock summary %}
-  {% else %}
-    {% call onsPanel({
-      "id": "view-submitted-guidance",
-      "classes": "ons-u-mb-m"
-     }) %}
-      {{ _("For security, you can no longer view or get a copy of your answers") }}
-    {% endcall %}
-  {% endif %}
+        })
+        }}
+
+        {% block summary %}
+            <div class="ons-u-mt-l ons-u-mb-l">{% include 'partials/summary/summary.html' %}</div>
+        {% endblock summary %}
+    {% else %}
+        {% call onsPanel({
+            "id": "view-submitted-guidance",
+            "classes": "ons-u-mb-m"
+            }) %}
+            {{ _("For security, you can no longer view or get a copy of your answers") }}
+        {% endcall %}
+    {% endif %}
 {% endblock %}
