Add components ignore

--- a/templates/confirm-email.html
+++ b/templates/confirm-email.html
@@ -22,19 +22,21 @@
         {% set question_title = answer.title %}
         {% include 'partials/answer.html' %}
     {%- endfor -%}
+    {# djlint:off #}
     {{ onsButton({
         "text": _("Continue") ,
-    "variants": 'timer',
-    "classes": "ons-u-mt-xl",
-    "attributes": {
-    "data-qa": "btn-submit",
-    "data-ga-category": "Submit button",
-    "data-ga-action": "Continue",
-    "data-ga-label": "Continue button click",
-    "data-ga": "click"
-    }
-    })
+        "variants": 'timer',
+        "classes": "ons-u-mt-xl",
+        "attributes": {
+            "data-qa": "btn-submit",
+            "data-ga-category": "Submit button",
+            "data-ga-action": "Continue",
+            "data-ga-label": "Continue button click",
+            "data-ga": "click"
+        }
+        })
     }}
+    {# djlint:on #}
     <br>
     <br>
 {% endblock %}
