--- a/templates/partials/individual-response-guidance.html
+++ b/templates/partials/individual-response-guidance.html
@@ -1,5 +1,6 @@
 {% from "components/details/_macro.njk" import onsDetails %}
 
+{# djlint:off #}
 {% call onsDetails({
     "classes": "ons-u-mt-s",
     "title": title,
@@ -19,3 +20,4 @@
         </p>
     </div>
 {% endcall %}
+{# djlint:on #}
