--- a/templates/confirmation-email-sent.html
+++ b/templates/confirmation-email-sent.html
@@ -7,28 +7,32 @@
 {% set sign_out_url = content.sign_out_url %}
 
 {% block main %}
-    {% call onsPanel({
-        "spacious": true,
-        "type": "success",
-        "classes": "ons-u-mb-s",
-        "iconType": "check",
-        "iconSize": "xl"
+    {# djlint:off #}
+    {% call
+        onsPanel({
+            "spacious": true,
+            "type": "success",
+            "classes": "ons-u-mb-s",
+            "iconType": "check",
+            "iconSize": "xl"
         })
-        %}
-        <h1 data-qa="confirmation-text">
-            {{ _("A confirmation email has been sent to {email}").format(email = content.email) }}
-        </h1>
+    %}
+    <h1 data-qa="confirmation-text">
+        {{ _("A confirmation email has been sent to {email}").format(email = content.email) }}
+    </h1>
     {% endcall %}
-    {% call onsPanel({
-        "type": "bare",
-        "classes": "ons-u-mb-s",
-        "iconType": "lock"
+    {% call
+        onsPanel({
+            "type": "bare",
+            "classes": "ons-u-mb-s",
+            "iconType": "lock"
         })
-        %}
-        <p>
-            {{ _("The email will be sent from <em>census.2021@notifications.service.gov.uk</em>") }}
-        </p>
+    %}
+    <p>
+        {{ _("The email will be sent from <em>census.2021@notifications.service.gov.uk</em>") }}
+    </p>
     {% endcall %}
+    {# djlint:on #}
     {% if content.show_send_another_email_guidance %}
         <p>
             <strong>{{ _("Didn't receive an email?") }}</strong>
