--- a/templates/feedback-sent.html
+++ b/templates/feedback-sent.html
@@ -8,30 +8,34 @@
 {% set sign_out_url = content.sign_out_url %}
 
 {% block main %}
+    {# djlint:off #}
     {% call onsPanel({
         "spacious": true,
         "type": "success",
         "classes": "ons-u-mb-s",
         "iconType": "check",
         "iconSize": "xl"
-        }) %}
-        <h1 data-qa="feedback-thank-you-text">{{ _("Thank you for your feedback") }}</h1>
-        <p>
-            {{ _("Your comments will help us make improvements to our surveys. We are not able to reply to comments, but we appreciate your feedback") }}
-        </p>
+        })
+    %}
+    <h1 data-qa="feedback-thank-you-text">{{ _("Thank you for your feedback") }}</h1>
+    <p>
+        {{ _("Your comments will help us make improvements to our surveys. We are not able to reply to comments, but we appreciate your feedback") }}
+    </p>
     {% endcall %}
-    {{ onsButton({
-        "type": "button",
-        "text": _("Done") ,
-    "classes": "ons-u-mb-m",
-    "url": url_for('post_submission.get_thank_you'),
-    "attributes": {
-    "data-qa": "btn-done",
-    "data-ga-category": "Submit button",
-    "data-ga-action": "Done",
-    "data-ga-label": "Done button click",
-    "data-ga": "click"
-    }
-    })
+    {{
+        onsButton({
+            "type": "button",
+            "text": _("Done") ,
+            "classes": "ons-u-mb-m",
+            "url": url_for('post_submission.get_thank_you'),
+            "attributes": {
+                "data-qa": "btn-done",
+                "data-ga-category": "Submit button",
+                "data-ga-action": "Done",
+                "data-ga-label": "Done button click",
+                "data-ga": "click"
+            }
+        })
     }}
+    {# djlint:on #}
 {% endblock %}
