--- a/templates/layouts/_questionnaire.html
+++ b/templates/layouts/_questionnaire.html
@@ -21,18 +21,21 @@
     {% endblock %}
 
     {% block submit_button %}
-        {{ onsButton({
+        {# djlint:off #}
+        {{
+            onsButton({
                 "variants": 'timer',
                 "text": continue_button_text | default(_("Save and continue") ),
-        "attributes": {
-        "data-qa": "btn-submit",
-        "data-ga-category": "Submit button",
-        "data-ga-action": "Save and continue",
-        "data-ga-label": "Save and continue button click",
-        "data-ga": "click"
-        }
-        })
+                "attributes": {
+                    "data-qa": "btn-submit",
+                    "data-ga-category": "Submit button",
+                    "data-ga-action": "Save and continue",
+                    "data-ga-label": "Save and continue button click",
+                    "data-ga": "click"
+                }
+            })
         }}
+        {# djlint:on #}
     {% endblock %}
 
     {% block after_submit_button_content %}
