--- a/templates/signed-out.html
+++ b/templates/signed-out.html
@@ -5,15 +5,18 @@
 {% set page_title = _("Signed out") %}
 
 {% block main %}
-    {{ onsPanel({
-        "id": '',
-        "type": 'success',
-        "iconType": 'check',
-        "iconSize": 'xl',
-        "classes": "ons-u-mb-xl",
-        "body": _("<h1>Your progress has been saved</h1>") 
-    })
+    {# djlint:off #}
+    {{
+        onsPanel({
+            "id": '',
+            "type": 'success',
+            "iconType": 'check',
+            "iconSize": 'xl',
+            "classes": "ons-u-mb-xl",
+            "body": _("<h1>Your progress has been saved</h1>")
+        })
     }}
+    {# djlint:on #}
     {% if survey_type in SURVEY_TYPES_BUSINESS + SURVEY_TYPES_DEFAULT %}
         <p>
             {{ _("To find further information or resume the survey, <a href='{url}'>return to My Account</a>.").format(url = redirect_url) }}
