--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -25,19 +25,22 @@
 {% endif %}
 
 {% block main %}
+    {# djlint:off #}
     {% call onsPanel({
         "type": "success",
         "iconType": "check",
         "iconSize": "xl",
         "classes": "ons-u-mb-m"
-        }) %}
-        <h1 data-qa="title">
-            {{ _("Thank you for completing the {survey_title}").format( 
-            survey_title = survey_title) }}
-        </h1>
-        <p data-qa="guidance">{{ content.submission_text }}</p>
-        {{ onsDescriptionList(content.metadata) }}
+        })
+    %}
+    <h1 data-qa="title">
+        {{ _("Thank you for completing the {survey_title}").format(
+        survey_title = survey_title) }}
+    </h1>
+    <p data-qa="guidance">{{ content.submission_text }}</p>
+    {{ onsDescriptionList(content.metadata) }}
     {% endcall %}
+    {# djlint:on #}
     {% if content.guidance %}
         {% set contents = content.guidance.contents %}
         {% include 'partials/contents.html' %}
@@ -52,30 +55,36 @@
     {% set countdown_expired_text = _("For security, you can no longer view or get a copy of your answers") %}
     {% if content.view_submitted_response.enabled %}
         {% if content.view_submitted_response.expired %}
+            {# djlint:off #}
             {% call onsPanel({
                 "id": "view-submitted-response-guidance",
                 "classes": "ons-u-mb-m"
-                }) %}
-                {{ countdown_expired_text }}
+                })
+            %}
+            {{ countdown_expired_text }}
             {% endcall %}
+            {# djlint:on #}
         {% else %}
             {% set countdown_text = _("For security, your answers will only be available to view for another ") %}
             <h2 data-qa="view-submitted-response-title">{{ _("Get a copy of your answers") }}</h2>
             <p class="ons-u-mb-s">
                 {{ _("You can <a href='{url}' id='view-submitted-response-link'>save or print your answers</a> for your records.").format(url = content.view_submitted_response.url) }}
             </p>
+            {# djlint:off #}
             {{ onsTimeoutPanel ({
-            "id": "view-submitted-response-countdown",
-            "redirectUrl":  url_for("post_submission.get_thank_you") ,
-            "minutesTextSingular": _("minute"),
-            "minutesTextPlural": _("minutes"),
-            "secondsTextSingular": _("second"),
-            "secondsTextPlural": _("seconds"),
-            "countdownText": countdown_text,
-            "nojsText": _("For security, your answers will only be available to view for 45 minutes"),
-            "countdownExpiredText": countdown_expired_text,
-            "sessionExpiresAt": content.view_submitted_response.expires_at
-            }) }}
+                "id": "view-submitted-response-countdown",
+                "redirectUrl":  url_for("post_submission.get_thank_you") ,
+                "minutesTextSingular": _("minute"),
+                "minutesTextPlural": _("minutes"),
+                "secondsTextSingular": _("second"),
+                "secondsTextPlural": _("seconds"),
+                "countdownText": countdown_text,
+                "nojsText": _("For security, your answers will only be available to view for 45 minutes"),
+                "countdownExpiredText": countdown_expired_text,
+                "sessionExpiresAt": content.view_submitted_response.expires_at
+                })
+            }}
+            {# djlint:on #}
         {% endif %}
     {% endif %}
     {% if content.confirmation_email_form %}
