--- a/templates/view-submitted-response.html
+++ b/templates/view-submitted-response.html
@@ -26,43 +26,50 @@
     <h1 class="ons-u-mt-m">{{ content.submitted_text }}</h1>
     {{ onsDescriptionList(content.metadata) }}
     {% if not content.view_submitted_response.expired %}
-        {{ onsButton({
+        {# djlint:off #}
+        {{
+            onsButton({
                 "type": 'button',
-                "text": _('Print answers') ,
-        "variants": ['small', 'secondary', 'print'],
-        "attributes": {
-        "data-qa": "btn-print",
-        "data-ga-category": "Print button",
-        "data-ga-action": "Open print Dialogue",
-        "data-ga-label": "Print button click",
-        "data-ga": "click"
-        }
-        })
+                "text": _('Print answers'),
+                "variants": ['small', 'secondary', 'print'],
+                "attributes": {
+                    "data-qa": "btn-print",
+                    "data-ga-category": "Print button",
+                    "data-ga-action": "Open print Dialogue",
+                    "data-ga-label": "Print button click",
+                    "data-ga": "click"
+                }
+            })
         }}
-        {{ onsButton({
+        {{
+            onsButton({
                 "text": _('Save answers as PDF') ,
-        "variants": ['small', 'secondary', 'timer', 'download'],
-        "url": content.pdf_url,
-        "removeDownloadAttribute": true,
-        "attributes": {
-        "data-qa": "btn-pdf",
-        "data-ga-category": "PDF button",
-        "data-ga-action": "Download PDF",
-        "data-ga-label": "PDF button click",
-        "data-ga": "click"
-        }
-        })
+                "variants": ['small', 'secondary', 'timer', 'download'],
+                "url": content.pdf_url,
+                "removeDownloadAttribute": true,
+                "attributes": {
+                    "data-qa": "btn-pdf",
+                    "data-ga-category": "PDF button",
+                    "data-ga-action": "Download PDF",
+                    "data-ga-label": "PDF button click",
+                    "data-ga": "click"
+                }
+            })
         }}
+        {# djlint:on #}
 
         {% block summary %}
             <div class="ons-u-mt-l ons-u-mb-l">{% include 'partials/summary/summary.html' %}</div>
         {% endblock summary %}
     {% else %}
-        {% call onsPanel({
-            "id": "view-submitted-guidance",
-            "classes": "ons-u-mb-m"
+        {# djlint:off #}
+        {% call
+            onsPanel({
+                "id": "view-submitted-guidance",
+                "classes": "ons-u-mb-m"
             }) %}
             {{ _("For security, you can no longer view or get a copy of your answers") }}
         {% endcall %}
+        {# djlint:on #}
     {% endif %}
 {% endblock %}
