--- a/templates/partials/answers/date.html
+++ b/templates/partials/answers/date.html
@@ -55,4 +55,6 @@
         }
         }) -%}
 {%- endif -%}
-{{ onsDateInput(<djlint.settings.Config object at 0x10f099650>) }}
+{# djlint:off #}
+{{ onsDateInput(config) }}
+{# djlint:off #}
