--- a/templates/partials/answers/duration.html
+++ b/templates/partials/answers/duration.html
@@ -31,4 +31,6 @@
             }
         }) %}
 {% endif %}
-{{ onsDuration(<djlint.settings.Config object at 0x10300e450>) }}
+{# djlint:off #}
+{{ onsDuration(config) }}
+{# djlint:on #}
