--- a/templates/partials/answers/mobilenumber.html
+++ b/templates/partials/answers/mobilenumber.html
@@ -18,4 +18,6 @@
     },
     "error": error
 } %}
-{{ onsInput(<djlint.settings.Config object at 0x10f696ad0>) }}
+{# djlint:off #}
+{{ onsInput(config) }}
+{# djlint:on #}
