--- a/templates/partials/answers/radio.html
+++ b/templates/partials/answers/radio.html
@@ -16,4 +16,6 @@
             "ariaClearedText": "You have cleared your answer"
         }) %}
 {% endif %}
-{{ onsRadios(<djlint.settings.Config object at 0x10f24fc50>) }}
+{# djlint:off #}
+{{ onsRadios(config) }}
+{# djlint:off #}
