--- a/templates/partials/summary/list-summary.html
+++ b/templates/partials/summary/list-summary.html
@@ -39,4 +39,6 @@
         }
     ]
 } %}
-{{ onsSummary(<djlint.settings.Config object at 0x10bee3110>) }}
+{# djlint:off #}
+{{ onsSummary(config) }}
+{# djlint:on #}
