--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -6,18 +6,12 @@
     <h1>{{ _("Sorry, there is a problem") }}</h1>
     <p>{{ _("You may need to update your browser to a newer version.") }}</p>
     <p>{{ _("If the problem still occurs, try using a different browser or device.") }}</p>
-    {% if survey_type in SURVEY_TYPES_ALL %}
-        <p>
-            {{ _("For further help, please <a href='{url}'>contact us</a>.").format(url=contact_us_url) }}
-        </p>
-    {% else %}
-        <h2>{{ _("Business surveys") }}</h2>
-        <p>
-            {{ _("If you are completing a business survey and you need further help, please <a href='{url}'>contact us</a>.").format(url=business_contact_us_url) }}
-        </p>
-        <h2>{{ _("All other surveys") }}</h2>
-        <p>
-            {{ _("If you started your survey using an access code and you need further help, please <a href='{url}'>contact us</a>.").format(url=other_contact_us_url) }}
-        </p>
-    {% endif %}
+  {% if survey_type in SURVEY_TYPES_ALL %}
+    <p>{{ _("For further help, please <a href='{url}'>contact us</a>.").format(url=contact_us_url) }}</p>
+  {% else %}
+    <h2>{{ _("Business surveys") }}</h2>
+    <p>{{ _("If you are completing a business survey and you need further help, please <a href='{url}'>contact us</a>.").format(url=business_contact_us_url) }}</p>
+    <h2>{{ _("All other surveys") }}</h2>
+    <p>{{ _("If you started your survey using an access code and you need further help, please <a href='{url}'>contact us</a>.").format(url=other_contact_us_url) }}</p>
+  {% endif %}
 {% endblock %}
